syntax = "proto3";
package chat;

message SetConfigRequest {
  string newConfig = 1;
}

message SetConfigResponse {
  string updatedConfig = 1;
}

service Chat {
  rpc SetConfig(SetConfigRequest) returns (SetConfigResponse);
}
